frontend: account for wildcard characters and fix overflow

--- a/backend/frontend/src/components/Navigator/Search.css
+++ b/backend/frontend/src/components/Navigator/Search.css
@@ -19,11 +19,15 @@
     font-size: 30px;
 }
 
-.search .results .match {
+.search .results .result {
+    display: block;
+}
+
+.search .results .matched.words {
     color: red;
 }
 
-.search .results .result span::after {
+.search .results .result .words::after {
     white-space: pre-wrap;
     content: " ";
 }
